==> Jiang-kun02/STM32F103c8t6_learning/GPIO_std/STM32_std_AS5600/Hardware/MyI2C.c <==
#include "stm32f10x.h"                  // Device header
#include "Delay.h"		// 这个头文件主要是模拟IIC延时使用的，但是F1性能一般，似乎可以省略掉延时

void MyI2C_W_SCL(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, GPIO_Pin_6, (BitAction)BitValue);
	Delay_us(10);
}

void MyI2C_W_SDA(uint8_t BitValue)
{
	GPIO_WriteBit(GPIOB, GPIO_Pin_7, (BitAction)BitValue);
	Delay_us(10);
}

uint8_t MyI2C_R_SDA(void)
{
	uint8_t BitValue;
	BitValue = GPIO_ReadInputDataBit(GPIOB, GPIO_Pin_7);
	Delay_us(10);
	return BitValue;
}

void MyI2C_Init(void)
{
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
	
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_OD;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6 | GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOB, &GPIO_InitStructure);
	
	GPIO_SetBits(GPIOB, GPIO_Pin_6 | GPIO_Pin_7);
}

void MyI2C_Start(void)
{
	MyI2C_W_SDA(1);
	MyI2C_W_SCL(1);
	MyI2C_W_SDA(0);
	MyI2C_W_SCL(0);
}

void MyI2C_Stop(void)
{
	MyI2C_W_SDA(0);
	MyI2C_W_SCL(1);
	MyI2C_W_SDA(1);
}

void MyI2C_SendByte(uint8_t Byte)
{
	uint8_t i;
	for (i = 0; i < 8; i ++)
	{
		MyI2C_W_SDA(Byte & (0x80 >> i));
		MyI2C_W_SCL(1);
		MyI2C_W_SCL(0);
	}
}

uint8_t MyI2C_ReceiveByte(void)
{
	uint8_t i, Byte = 0x00;		// 空数据，如果哪一个需要置1 则通过下面的按位或
	MyI2C_W_SDA(1);				// 释放SDA
	for (i = 0; i < 8; i ++)
	{
		MyI2C_W_SCL(1);			// 产生一个上升沿，让从机将数据放在SDA数据线上
		if (MyI2C_R_SDA() == 1){Byte |= (0x80 >> i);}	//主机一旦检测到SDA数据线上是高电平，就去修改Byte的响应位，执行8次一个字节的数据完毕
		MyI2C_W_SCL(0);			// 读取玩数据，将SCL拉至低电平
	}
	return Byte;
}

void MyI2C_SendAck(uint8_t AckBit)	// 这是一个发送应答，是主机接收完一个字节之后，让不让从机继续发
{
	MyI2C_W_SDA(AckBit);
	MyI2C_W_SCL(1);
	MyI2C_W_SCL(0);
}

uint8_t MyI2C_ReceiveAck(void)		// 这是一个接收应答，是主机发送完后确定从机收到没有
{
	uint8_t AckBit;
	MyI2C_W_SDA(1);
	MyI2C_W_SCL(1);
	AckBit = MyI2C_R_SDA();
	MyI2C_W_SCL(0);
	return AckBit;
}
